# espidf_gnat_runtime

./: .gitignore  CMakeLists.txt  README.md  alire.toml  espidf_gnat_runtime.gpr  runtime-esp32c3.json  runtime-esp32s3.json  runtime.json
.github/workflows/: acats.yaml
selftest/: alire.toml  espidf_gnat_runtime_selftest.gpr
source/: a-calclo.adb  a-intnam__esp32c3.ads  a-intnam__esp32s3.ads  freertos.c  s-espidf.adb  s-espidf.ads  s-freert.adb  s-freert.ads  s-inifin.adb  s-inifin.ads  s-init.adb  s-interr.ads  s-interr__espidf.adb  s-libgna.ads  s-lidosq.ads  s-macres.adb  s-multip.adb  s-multip.ads  s-osinte.adb  s-osinte.ads  s-osinte__espidf.adb  s-osinte__espidf.ads  s-oslock__freertos.ads  s-parame.ads  s-parame__espidf.adb  s-parame__espidf.ads  s-reldel.adb  s-soflin.adb  s-soflin.ads  s-soliin.adb  s-solita.adb  s-taenca.adb  s-taenca.ads  s-taprob.adb  s-taprob.ads  s-taprop.adb  s-taprop.ads  s-taprop__freertos.adb  s-tasinf.ads  s-tasini.adb  (+14 more)
source/gcc-15/libgnarl/: s-tarest.adb
